--- a/src/contato.html
+++ b/src/contato.html
@@ -90,13 +90,13 @@
             <h5 class="card-header text-center">Contato</h5>
             <div class="card-body">
               <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="email" class="form-control" data-js="phone" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Email</label>
               </div>
 
               <div class="form-floating mb-3">
                 <textarea class="form-control"  placeholder="Telefone" id="floatingTextarea2"></textarea>
-                <label for="floatingTextarea2" data-js="phone" >Telefone</label>
+                <label for="floatingTextarea2" >Telefone</label>
               </div>
 
               <div class="form-floating">
