--- a/src/contato.html
+++ b/src/contato.html
@@ -90,12 +90,12 @@
             <h5 class="card-header text-center">Contato</h5>
             <div class="card-body">
               <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="email"  class="form-control" id="floatingInput" placeholder="name@example.com">
                 <label for="floatingInput">Email</label>
               </div>
 
               <div class="form-floating mb-3">
-                <textarea class="form-control"  placeholder="Telefone" id="floatingTextarea2"></textarea>
+                <input type="phone" data-js="phone" class="form-control" id="floatingTextarea2" placeholder="Telefone">  
                 <label for="floatingTextarea2" >Telefone</label>
               </div>
 
