--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -120,7 +120,7 @@
         </div>
     </main>
     <!--RODAPÉ-->
-    <footer id="footercontato">
+    <!-- <footer id="footercontato">
         <div class="container-fluid bg-light pt-3 pb-4 mt-3">
             <div class="row">
 
@@ -207,8 +207,8 @@
                     </p>
                 </div>
 
-                <!-- <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">-->
-                <div class="col-12 col-md-2  mb-3">
+                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">-->
+                <!-- <div class="col-12 col-md-2  mb-3">
                     <div class="card mb-3 mb-3">
                         <div class="card-body mx-auto">
                             <h5 class="card-title fs-6"><b>Sugestões e Reclamações</b></h5>
@@ -229,12 +229,12 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <div class="container-fluid text-center" style="background-color: #b22222;">
+        <!-- <div class="container-fluid text-center" style="background-color: #b22222;">
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
-    </footer>
+    </footer> -->
     <script src="script/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
