--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
                                 <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contato.html">Contato</a>
+                                <a class="nav-link" href="pedidos.html">Visualizar Pedidos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="cadastro.html">Cadastro</a>
