--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="cadastro.html">Cadastro</a>
                             </li>
+                            <button type="button" onclick="sair()">sair</button>
                         </ul>
                         <img id="solApagado" src="img/icones/brightness-low.svg" alt="" width="30px" height="30px">
                         <img id="sol" src="img/icones/brightness-low-fill.svg" alt="" width="30px" height="30px">
