botao sair em todas as telas

--- a/src/sobrenos.html
+++ b/src/sobrenos.html
@@ -53,9 +53,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="contato.html">Contato</a>
                         </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="cadastro.html">Cadastro</a>
-                      </li>
+                      <button type="button" onclick="sair()">sair</button>
                     </ul>
                 </div>
             </div>
