--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="pedidos.html">Visualizar Pedidos</a>
                             </li>
-                            <button type="button" onclick="sair()">sair</button>
+                            <li class="nav-item">
+                                <a class="nav-item" type="button" onclick="sair()" id="btnSair">Sair</a>
+                            </li>
                         </ul>
                         <img id="solApagado" src="img/icones/brightness-low.svg" alt="" width="30px" height="30px">
                         <img id="sol" src="img/icones/brightness-low-fill.svg" alt="" width="30px" height="30px">
