--- a/src/mensagem.html
+++ b/src/mensagem.html
@@ -9,6 +9,6 @@
 <body class="main" id="mainmensasgem">
     <h1 class="text" id="textomensasgem">Obrigado pelo contato</h1>
     <p class="paragrafo" id="paragrafomensagem">Em breve entrarei em contato</p>
-    <a href="index.html" class="btn" id="btnmensagem">Home</a>
+    <a href="home.html" class="btn" id="btnmensagem">Home</a>
 </body>
 </html>
