--- a/src/ondeestamos.html
+++ b/src/ondeestamos.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-xxl">
             <nav class="navbar fixed-top" style="background-color: #b22222;">
                 <div class="container-fluid">
-                    <a class="navbar-brand me-5" href="index.html"><img id="" src="img/zucco-removebg-preview.png" alt=""></a>
+                    <a class="navbar-brand me-5" href="home.html"><img id="" src="img/zucco-removebg-preview.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -31,7 +31,7 @@
 
                         <ul class="navbar-nav me-auto  mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="sobrenos.html">Sobre nós</a>
@@ -52,7 +52,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="contato.html">Contato</a>
                             </li>
-                            <button type="button" onclick="sair()">sair</button>
+                            <li class="nav-item">
+                                <a class="nav-item" type="button" onclick="sair()" id="btnSair">Sair</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -264,6 +266,6 @@
 </body>
 
 </html>
-<script src="script.js"></script>
+<script src="script/script.js"></script>
 </body>
 </html>
