--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -103,7 +103,7 @@
                       <div class="accordion-body">
                         <div class="d-grid gap-2">
                           <button class="btn btn-light" type="button">Região Metropolitana</button>
-                          <button class="btn btn-light" type="button">Região Notre</button>
+                          <button class="btn btn-light" type="button">Região Norte</button>
                           <button class="btn btn-light" type="button">Região Sul</button>
                           <button class="btn btn-light" type="button">Interior do Estado</button>
                         </div>
