--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -17,7 +17,7 @@
         <input type="text" name="name" placeholder="Digite um usuário" autocomplete="off" 
             class="CadastroUsuario" id="usuario">
         <label class="identificacaoformulario" id="labelTelefone">Telefone:</label>
-        <input type="text" name="phone" placeholder="Digite seu telefone" autocomplete="off" 
+        <input type="text" data-js="phone" name="phone" placeholder="Digite seu telefone" autocomplete="off" 
             class="CadastroUsuario" id="tel">
         <label class="identificacaoformulario" for="password" id="labelSenha">Senha:</label>
         <input type="password" name="password" placeholder="Digite sua senha"  class="CadastroUsuario"
@@ -29,5 +29,6 @@
             <button class="btncadastro" type="button" onclick="cadastrar()">Cadastrar</button>
     </form>
     <script src="script/script.js"></script>
+    <script src="/src/script/validacoes.js"></script>
 </body>
 </html>
