--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -209,5 +209,6 @@
         </div>
     </footer>
     <script src="script/script.js"></script>
+    <script src="/src/script/validacoes.js"></script>
 </body>
 </html>
