Criação de uma pasta para o css

--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -70,10 +70,9 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">#</th>
-                        <th scope="col">Nome</th>
+                        <th scope="col">Id</th>
                         <th scope="col">Nº do pedido</th>
+                        <th scope="col">Nome</th>
                         <th scope="col">E-mail</th>
                         <th scope="col">Celular</th>
                         <th scope="col">CPF</th>
@@ -81,40 +80,12 @@
                         <th scope="col">Cidade de Origem</th>
                         <th scope="col">Cidade de Destino</th>
                         <th scope="col">Tipo de serviço</th>
+                        <th scope="col">Tipo de serviço</th>
                         <th scope="col" colspan="4" class="text-center">Ações</th>
                     </tr>
                 </thead>
                 <tbody id="paiPlanilha">
-                    <tr>
-                        <th scope="row">1</th>
-                        <td>Exemplo de nome</td>
-                        <td>000-1</td>
-                        <td>email.exemplo@nome.empresa.com</td>
-                        <td>(99) 99999-9999</td>
-                        <td>123.456.789-10</td>
-                        <td>12.345.678/0001-99</td>
-                        <td>Contagem-MG</td>
-                        <td>Flores da Cunha-RS</td>
-                        <td>Cotação</td>
-                        <td><button class="btn btn-danger">Apagar</button></td>
-                        <td><button class="btn btn-warning" type="button" data-bs-toggle="modal" data-bs-target="#modalEditar">Editar</button></td>
-                        <!-- <div class="modal" id="modalEditar">
-                            <div class="modal-dialog">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h3>Editar informações</h3>
-                                        <button class="btn btn-close" data-bs-dismiss="modal"></button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <p>Teste</p>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button class="btn btn-light">Enviar</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
-                    </tr>
+
                 </tbody>
             </table>
         </div>
@@ -235,7 +206,8 @@
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
     </footer> -->
-    <script src="script/script.js"></script>
+    <!-- <script src="script/script.js"></script> -->
+    <script src="script/requisicoes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
