--- a/src/home.html
+++ b/src/home.html
@@ -124,7 +124,7 @@
                         <div class="card text-center h-100">
                             <img src="img/conheçaempresa.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">Sobre Nós</h5>
+                                <h5 class="card-title">AINDA N FINALIZADO OK</h5>
                                 <p class="card-text">Fundada em 2009, a Zucco Transportes oferece aos clientes e parceiros SOLUÇÕES e SERVIÇOS para Logística e Transportes atendendo as necessidades individuais de cada um de nossos parceiros.</p>
                             </div>
                             <div class="card-footer">
