--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tela de login</title>
+  <title>Zucco Transportes</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -13,11 +13,11 @@
   <div id="formularioLogin">
     <a id="mensagemCadastro">Acessar</a>
     <br><br>
-    <label for="usuario" id="userLabel">Usuário:</label>
-    <input type="text" id="usuario" class="respostaUsuario">
+    <label for="usuario" id="userLabel" class="opcaoLogin">Usuário:</label>
+    <input type="text" class="form-control" id="usuario" placeholder="Example input">
     <br><br>
-    <label for="senha" id="senhaLabel">Senha:</label>
-    <input type="password" id="senha" class="respostaUsuario">
+    <label for="senha" id="senhaLabel" class="opcaoLogin">Senha:</label>
+    <input type="password" class="form-control" id="senha" placeholder="Password">
     <br><br>
     <button type="button" onclick='entrar()' id="btnEntrar">Entrar</button>
     <br>
