--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastrar</title>
+    <title>Zucco Transportes: Cadastro</title>
+    <link rel="icon" href="img/logos/favicon_io/favicon-16x16.png">
     <link rel="stylesheet" href="style/style.css">
 </head>
 
