--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zucco Transportes</title>
+  <title>Zucco Transportes: Login</title>
+  <link rel="icon" href="img/logos/favicon_io/favicon-16x16.png">
   <link rel="stylesheet" href="style/style.css">
 </head>
 
