--- a/src/mensagem.html
+++ b/src/mensagem.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
+    <title>Zucco Transportes</title>
+    <link rel="icon" href="img/logos/favicon_io/favicon-16x16.png">
 </head>
 <body class="main" id="mainmensasgem">
     <h1 class="text" id="textomensasgem">Obrigado pelo contato</h1>
