add cards rápidos home

--- a/src/home.html
+++ b/src/home.html
@@ -122,10 +122,10 @@
                 <div class="row" id="descubra">
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 mb-md-2 mb-sm-2">
                         <div class="card text-center h-100">
-                            <img src="img/conheçaempresa.jpg" class="card-img-top" alt="...">
+                            <img src="img/conhecerzucco.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">AINDA N FINALIZADO OK</h5>
-                                <p class="card-text">Fundada em 2009, a Zucco Transportes oferece aos clientes e parceiros SOLUÇÕES e SERVIÇOS para Logística e Transportes atendendo as necessidades individuais de cada um de nossos parceiros.</p>
+                                <h5 class="card-title">Sobre Nós</h5>
+                                <p class="card-text">A Zucco Transportes oferece aos clientes e parceiros SOLUÇÕES e SERVIÇOS para Logística e Transportes atendendo as necessidades individuais de cada um.</p>
                             </div>
                             <div class="card-footer">
                                 <button type="button" class="btn btn-danger"><a id="cardswhite"
@@ -135,10 +135,10 @@
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 mb-md-2 mb-sm-2">
                         <div class="card text-center h-100">
-                            <img src="img/coletas_de_mercadorias.jpg" class="card-img-top" alt="...">
+                            <img src="img/imgondeestamos.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Onde Estamos</h5>
-                                <p class="card-text">Confira no mapa a localização de nossas unidades, terminais de distribuição e escritórios. Selecione o que gostaria de ver no mapa e clique na localização indicada para saber como chegar até nós.</p>
+                                <p class="card-text">Confira no mapa a localização de nossas unidades. Selecione o que gostaria de ver no mapa e clique na localização indicada para saber como chegar até nós.</p>
 
                             </div>
                             <div class="card-footer">
@@ -150,7 +150,7 @@
 
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 mb-md-2 mb-sm-2">
                         <div class="card text-center h-100">
-                            <img src="img/carga_fechada.jpg" class="card-img-top" alt="...">
+                            <img src="img/cidatendidas.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Cidades Atendidas</h5>
                                 <p class="card-text">Confira a listagem completa das cidades. Consulte também os  prazos de coleta e entrega referente a cada cidade e estado.</p>
