--- a/src/home.html
+++ b/src/home.html
@@ -129,7 +129,7 @@
                             </div>
                             <div class="card-footer">
                                 <button type="button" class="btn btn-danger"><a id="cardswhite"
-                                        href="formularioServicos.html" target="_blank"> Saiba mais</a></button>
+                                        href="sobrenos.html" target="_blank"> Saiba mais</a></button>
                             </div>
                         </div>
                     </div>
@@ -143,7 +143,7 @@
                             </div>
                             <div class="card-footer">
                                 <button type="button" class="btn btn-danger"><a id="cardswhite"
-                                        href="formularioServicos.html" target="_blank">Saiba mais</a></button>
+                                        href="ondeestamos.html" target="_blank">Saiba mais</a></button>
                             </div>
                         </div>
                     </div>
@@ -158,7 +158,7 @@
                             </div>
                             <div class="card-footer">
                                 <button type="button" class="btn btn-danger"><a id="cardswhite"
-                                        href="formularioServicos.html" target="_blank">Saiba mais</a></button>
+                                        href="cidadesatendidas.html" target="_blank">Saiba mais</a></button>
                             </div>
                         </div>
                     </div>
