--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -63,93 +63,124 @@
         </nav>
     </header>
         <!--CONTEUDO-->
-        <main>
+      <main>
         <figure class="text-center mt-5">
         <h2>CIDADES ATENDIDAS</h2>
         </figure>
-        <div class="container my-3">
-            <div class="row">
-              <div class="col">
-                <div class="accordion" id="accordionExample1">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
-                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Estados
-                      </button>
-                    </h2>
-                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample1">
-                      <div class="accordion-body">
-                        <div class="d-grid gap-2">
-                          <button class="btn btn-light" type="button">São Paulo</button>
-                          <button class="btn btn-light" type="button">Santa Catarina</button>
-                          <button class="btn btn-light" type="button">Paraná</button>
-                          <button class="btn btn-light" type="button">Minas Gerais</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-        
-              <div class="col">
-                <div class="accordion" id="accordionExample2">
-                  <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
-                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
-                        Regiões
-                      </button>
-                    </h2>
-                    <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#accordionExample2">
-                      <div class="accordion-body">
-                        <div class="d-grid gap-2">
-                          <button class="btn btn-light" type="button">Região Metropolitana</button>
-                          <button class="btn btn-light" type="button">Região Norte</button>
-                          <button class="btn btn-light" type="button">Região Sul</button>
-                          <button class="btn btn-light" type="button">Interior do Estado</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-        
-            <div class="row">
-              <div class="col">
-                <div class="card mt-3">
-                  <div class="card-body">
-                    <h5 class="card-title">Cidades</h5>
-                    <div class="row">
-                      <div class="col">
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item">1</li>
-                          <li class="list-group-item">2</li>
-                          <li class="list-group-item">3</li>
-                          <li class="list-group-item">4</li>
-                          <li class="list-group-item">5</li>
-                          <li class="list-group-item"> 6</li>
-                          <li class="list-group-item"> 7</li>
-                          <li class="list-group-item">8</li>
-                        </ul>
-                      </div>
-                      <div class="col">
-                        <ul class="list-group list-group-flush">
-                          <li class="list-group-item"> 9</li>
-                          <li class="list-group-item">10</li>
-                          <li class="list-group-item">11</li>
-                          <li class="list-group-item">12</li>
-                          <li class="list-group-item">13</li>
-                          <li class="list-group-item">14</li>
-                          <li class="list-group-item">15</li>
-                          <li class="list-group-item">16</li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="accordion" id="accordion1">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading1">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
+              Santa Catarina
+              </button>
+            </h2>
+            <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1"
+              data-bs-parent="#accordion1">
+              <div class="accordion-body">
+                <div class="list-group">
+                  <a href="#" class="list-group-item list-group-item-action">Item 1</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 2</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 3</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 4</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 5</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 6</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 7</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 8</a>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="accordion" id="accordion2">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading2">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                Paraná
+              </button>
+            </h2>
+            <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2"
+              data-bs-parent="#accordion2">
+              <div class="accordion-body">
+                <div class="list-group">
+                  <a href="#" class="list-group-item list-group-item-action">Item 1</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 2</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 3</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 4</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 5</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 6</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 7</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 8</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div class="col-md-6">
+        <div class="accordion" id="accordion3">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading3">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+               São Paulo
+              </button>
+            </h2>
+            <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3"
+              data-bs-parent="#accordion3">
+              <div class="accordion-body">
+                <div class="list-group">
+                  <a href="#" class="list-group-item list-group-item-action">Item 1</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 2</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 3</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 4</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 5</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 6</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 7</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 8</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="accordion" id="accordion4">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="heading4">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
+                Minas Gerais
+              </button>
+            </h2>
+            <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4"
+              data-bs-parent="#accordion4">
+              <div class="accordion-body">
+                <div class="list-group">
+                  <a href="#" class="list-group-item list-group-item-action">Item 1</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 2</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 3</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 4</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 5</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 6</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 7</a>
+                  <a href="#" class="list-group-item list-group-item-action">Item 8</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
           <div class="container">
   <div class="row">
     <div class="col-sm-6">
