--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -185,7 +185,7 @@
   <div class="row">
     <div class="col-sm-6">
       <figure class="text-center mt-5">
-        <h2>TEMPO DE ENTREGA</h2>
+        <h2>TEMPO ENTREGA</h2>
       </figure>
       <div class="card">
         <div class="card-body">
