Alerta de sucesso adicionado

--- a/src/formularioServicos.html
+++ b/src/formularioServicos.html
@@ -150,9 +150,12 @@
                             <div class="spinner-border text-success" role="status" id="spinner">
                                 <span class="visually-hidden">Loading...</span>
                             </div>                         
-                        </button> 
+                        </button>
+                        <div id="recebeAlerta">
+
+                        </div> 
                     </div>
-                </form>
+                </form>                    
             </div>
         </div>
     </main>
