--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -10,12 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <!--  -->
 <body onload="pegaDados()">
     <!--CABEÇALHO-->
-    <!-- <header>
+    <header>
         <nav class="navbar navbar-expand-xxl">
             <nav class="navbar fixed-top" style="background-color: #b22222;">
                 <div class="container-fluid">
@@ -61,7 +61,7 @@
                 </div>
             </nav>
         </nav>
-    </header> -->
+    </header>
     <main>
         <h1 id="sobreZucco" class="mt-2 text-center">Planilha de pedidos</h1>
         <!--TODAS AS PAGS-->
