--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <!--  -->
+
 <body onload="pegaDados()">
     <!--CABEÇALHO-->
     <header>
@@ -67,7 +68,7 @@
         <!--TODAS AS PAGS-->
 
         <div class="container">
-            <table class="table">
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th scope="col">Id</th>
@@ -80,7 +81,6 @@
                         <th scope="col">Cidade de Origem</th>
                         <th scope="col">Cidade de Destino</th>
                         <th scope="col">Tipo de serviço</th>
-                        <th scope="col">Tipo de serviço</th>
                         <th scope="col" colspan="4" class="text-center">Ações</th>
                     </tr>
                 </thead>
@@ -91,10 +91,9 @@
         </div>
     </main>
     <!--RODAPÉ-->
-    <!-- <footer id="footercontato">
-        <div class="container-fluid bg-light pt-3 pb-4 mt-3">
+    <footer id="footer">
+        <div class="container-fluid bg-light pt-3 pb-4">
             <div class="row">
-
                 <div class="col-12 col-sm-12 col-md-2 col-lg-2 col-xl-2 col-xxl-2 mb-3 offset-md-1 mb-3">
                     <p><b>Links Rápidos</b></p>
                     <p><a href="#">Help</a></p>
@@ -177,9 +176,8 @@
                         <b>0800 1111 22</b>
                     </p>
                 </div>
-
-                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">-->
-                <!-- <div class="col-12 col-md-2  mb-3">
+                <!-- <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">-->
+                <div class="col-12 col-md-2">
                     <div class="card mb-3 mb-3">
                         <div class="card-body mx-auto">
                             <h5 class="card-title fs-6"><b>Sugestões e Reclamações</b></h5>
@@ -200,12 +198,12 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
 
-        <!-- <div class="container-fluid text-center" style="background-color: #b22222;">
+        <div class="container-fluid text-center" style="background-color: #b22222;">
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
-    </footer> -->
+    </footer>
     <!-- <script src="script/script.js"></script> -->
     <script src="script/requisicoes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
