--- a/src/sobrenos.html
+++ b/src/sobrenos.html
@@ -70,55 +70,57 @@
 
     <div class="container-fluid">
       <!--HOME, SOBRE NÓS-->
-      <div class="col-auto pt-3 ">
-        <div id="carouselExampleDark" class="carousel carousel-dark slide carousel-16-9">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
+      <div class="row d-flex justify-content-center">
+        <div class="col-8 pt-3 ">
+          <div id="carouselExampleDark" class="carousel carousel-dark slide carousel-16-9">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-bs-interval="10000">
+                <img src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.56.31 (1).jpg"
+                  class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 class=" fs-5 text-white">Zucco Transportes</h5>
+                  <p class=" fs-5 text-white">A Zucco Transportes é uma empresa familiar que foi fundada em janeiro de
+                    2009, na cidade de Farroupilha-RS.</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.55.00 (1).jpg"
+                  class="d-block w-100" alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 class=" fs-5 text-white">Nossas Instalações</h5>
+                  <p class=" fs-5 text-white">Contamos com estruturas em Flores da Cunha - RS e Contagem - MG, totalmente
+                    equipadas e prontas para atender as demandas.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 19.14.44.jpg" class="d-block w-100"
+                  alt="...">
+                <div class="carousel-caption d-none d-md-block">
+                  <h5 class=" fs-5 text-white">Nossas Missão</h5>
+                  <p class=" fs-5 text-white">Oferecer serviços de logística e transporte de produtos com transparência e
+                    responsabilidade.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="10000">
-              <img src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.56.31 (1).jpg"
-                class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 class=" fs-5 text-white">Zucco Transportes</h5>
-                <p class=" fs-5 text-white">A Zucco Transportes é uma empresa familiar que foi fundada em janeiro de
-                  2009, na cidade de Farroupilha-RS.</p>
-              </div>
-            </div>
-            <div class="carousel-item" data-bs-interval="2000">
-              <img src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 18.55.00 (1).jpg"
-                class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 class=" fs-5 text-white">Nossas Instalações</h5>
-                <p class=" fs-5 text-white">Contamos com estruturas em Flores da Cunha - RS e Contagem - MG, totalmente
-                  equipadas e prontas para atender as demandas.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="img\imagens carrossel\Imagem do WhatsApp de 2022-12-23 à(s) 19.14.44.jpg" class="d-block w-100"
-                alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5 class=" fs-5 text-white">Nossas Missão</h5>
-                <p class=" fs-5 text-white">Oferecer serviços de logística e transporte de produtos com transparência e
-                  responsabilidade.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
         </div>
       </div>
       <div class="container">
