--- a/src/home.html
+++ b/src/home.html
@@ -122,7 +122,7 @@
                 <div class="row" id="descubra">
                     <div class="col-12 col-sm-12 col-md-6 col-lg-3 col-xl-3 col-xxl-3 mb-md-2 mb-sm-2">
                         <div class="card text-center h-100">
-                            <img src="img/conhecazucco.png" class="card-img-top" alt="...">
+                            <img src="img/conhecazucco.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Sobre Nós</h5>
                                 <p class="card-text">A Zucco Transportes oferece aos clientes e parceiros SOLUÇÕES e SERVIÇOS para Logística e Transportes atendendo as necessidades individuais de cada um.</p>
