alteração img logo

--- a/src/formularioServicos.html
+++ b/src/formularioServicos.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-xxl">
             <nav class="navbar fixed-top" style="background-color: #b22222;">
                 <div class="container-fluid">
-                    <a class="navbar-brand me-5" href="home.html"><img id="" src="img/zucco-removebg-preview.png"
+                    <a class="navbar-brand me-5" href="home.html"><img id="" src="img/logos/logo2.png"
                             alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
