validando mascaras dnv

--- a/src/formularioServicos.html
+++ b/src/formularioServicos.html
@@ -275,6 +275,7 @@
     </footer>
     <!-- <script src="/src/script/validacoes.js"></script> -->
     <script src="/src/script/requisicoes.js"></script>
+    <script src="/src/script/validacoes.js"></script>
 </body>
 
 </html>
