--- a/src/home.html
+++ b/src/home.html
@@ -81,27 +81,27 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active" data-bs-interval="10000">
                                 <img src="img/imgcarrossel1.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
+                                <!-- <div class="carousel-caption d-none d-md-block">
                                     <h5 style="color: #ffffff;">Zucco Transportes</h5>
                                     <p style="color: #ffffff;">Some representative placeholder content for the first slide.
                                     </p>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="carousel-item" data-bs-interval="2000">
                                 <img src="img/imgcarrossel2.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
+                                <!-- <div class="carousel-caption d-none d-md-block">
                                     <h5 style="color: #ffffff;">Second slide label</h5>
                                     <p style="color: #ffffff;">Some representative placeholder content for the second slide.
                                     </p>
-                                </div>
+                                </div> -->
                             </div>
                             <div class="carousel-item">
                                 <img src="img/imgcarrossel3.jpg" class="d-block w-100" alt="...">
-                                <div class="carousel-caption d-none d-md-block">
+                                <!-- <div class="carousel-caption d-none d-md-block">
                                     <h5 style="color: #ffffff;">Third slide label</h5>
                                     <p style="color: #ffffff;">Some representative placeholder content for the third slide.
                                     </p>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
