Funcionalidade de tela noturna implementada em todas as telas

--- a/src/contato.html
+++ b/src/contato.html
@@ -57,6 +57,8 @@
                               <a class="nav-item" type="button" onclick="sair()" id="btnSair">Sair</a>
                           </li>
                         </ul>
+                        <img id="solApagado" src="img/icones/brightness-low.svg" alt="" width="30px" height="30px">
+                        <img id="sol" src="img/icones/brightness-low-fill.svg" alt="" width="30px" height="30px">
                     </div>
                 </div>
             </nav>
