--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -58,18 +58,21 @@
                                 <a class="nav-item" type="button" onclick="sair()" id="btnSair">Sair</a>
                             </li>
                         </ul>
+                        <img id="solApagado" src="img/icones/brightness-low.svg" alt="" width="30px" height="30px">
+                        <img id="sol" src="img/icones/brightness-low-fill.svg" alt="" width="30px" height="30px">
                     </div>
                 </div>
             </nav>
         </nav>
     </header>
 
-    <figure class="text-center mt-3">
-        <h1>Trabalhe Conosco</h1>
-        <!--TODAS AS PAGS-->
-    </figure>
+    
 
-    <main>
+    <main id="principal">
+            <figure class="text-center pt-3">
+                    <h1>Trabalhe Conosco</h1>
+                    <!--TODAS AS PAGS-->
+                </figure>
         <div id="main">
             <section id="formularioTrabConosco">
                 <h3>Informe seus dados</h3>
@@ -89,7 +92,6 @@
                 </form>
             </section>
         </div>
-
     </main>
 
     <!--RODAPÉ-->
@@ -209,6 +211,7 @@
         </div>
     </footer>
     <script src="script/script.js"></script>
+    <script src="script/modoNoturno.js"></script>
     <script src="/src/script/validacoes.js"></script>
 </body>
 </html>
