--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -48,9 +48,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contato.html">Contato</a>
-                            </li>
+                            
                             <li class="nav-item">
                                 <a class="nav-link" href="cadastro.html">Cadastro</a>
                             </li>
@@ -58,12 +56,14 @@
                                 <a class="nav-link" href="#" id="openModal">Acessar</a>
                             </li>
                         </ul>
+                        <img id="solApagado" src="img/icones/brightness-low.svg" alt="" width="30px" height="30px">
+                        <img id="sol" src="img/icones/brightness-low-fill.svg" alt="" width="30px" height="30px">
                     </div>
                 </div>
             </nav>
         </nav>
     </header>
-    <main>
+    <main id="principal">
         <h1 id="sobreZucco" class="mt-2 text-center">Planilha de pedidos</h1>
         <!--TODAS AS PAGS-->
 
@@ -85,7 +85,7 @@
                     </tr>
                 </thead>
                 <tbody id="paiPlanilha">
-
+                    
                 </tbody>
             </table>
         </div>
@@ -206,6 +206,7 @@
     </footer>
     <!-- <script src="script/script.js"></script> -->
     <script src="script/requisicoes.js"></script>
+    <script src="script/modoNoturno.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
