--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -791,6 +791,7 @@
                 <div class="form-group">
                   <label for="estado"></label>
                   <select class="form-control" id="estado" onchange="atualizarTempoEntrega()">
+                    <option value="" selected></option>
                     <option value="SP">São Paulo</option>
                     <option value="SC">Santa Catarina</option>
                     <option value="MG">Minas Gerais</option>
@@ -815,6 +816,7 @@
                 <div class="form-group">
                   <label for="EStado"></label>
                   <select class="form-control" id="EStado" onchange="atualizarValorTransporte()">
+                    <option value="" selected></option>
                     <option value="mg">Minas Gerais</option>
                     <option value="pr">Paraná</option>
                     <option value="sp">São Paulo</option>
