--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -17,15 +17,15 @@
         <a id="mensagemCadastro">Criar conta</a>
         <br><br>
         <label class="identificacaoformulario" id="labelNome">Nome:</label>
-        <input type="text" name="name" class="form-control" id="nome" placeholder="Digite seu nome completo">
+        <input type="text" name="name" class="form-control-cadastro" id="nome" placeholder="Digite seu nome completo">
         <label class="identificacaoformulario" id="labelUsuario">Usuário:</label>
-        <input type="text" name="name" class="form-control" id="usuario" placeholder="Digite seu usuário">
+        <input type="text" name="name" class="form-control-cadastro" id="usuario" placeholder="Digite seu usuário">
         <label class="identificacaoformulario" id="labelTelefone">Telefone:</label>
-        <input type="text" data-js="phone" name="name" class="form-control" id="tel" placeholder="Telefone">
+        <input type="text" data-js="phone" name="name" class="form-control-cadastro" id="tel" placeholder="Telefone">
         <label class="identificacaoformulario" for="password" id="labelSenha">Senha:</label>
-        <input type="password" name="password" placeholder="Digite sua senha" class="form-control" id="senha">
+        <input type="password" name="password" placeholder="Digite sua senha" class="form-control-cadastro" id="senha">
         <label class="identificacaoformulario" for="password" id="labelConfirmeSenha">Confirmação de senha:</label>
-        <input type="password" name="password" placeholder="Confirme a senha" class="form-control" id="confirmeSenha">
+        <input type="password" name="password" placeholder="Confirme a senha" class="form-control-cadastro" id="confirmeSenha">
         <br>
         <button class="btncadastro" type="button" onclick="cadastrar()">Cadastrar</button>
     </form>
