Nav sicronizado em todas as páginas

--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -52,7 +52,7 @@
                                 <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contato.html">Contato</a>
+                                <a class="nav-link" href="pedidos.html">Visualizar Pedidos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-item" type="button" onclick="sair()" id="btnSair">Sair</a>
