--- a/src/faq.html
+++ b/src/faq.html
@@ -51,7 +51,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
                             </li>
-                            
+                            <li class="nav-item">
+                                <a class="nav-link" href="pedidos.html">Visualizar Pedidos</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-item" type="button" onclick="sair()" id="btnSair">Sair</a>
                             </li>
