--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -30,7 +30,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto  mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link" aria-current="page" href="home.html">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="sobrenos.html">Sobre nós</a>
@@ -48,7 +48,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="cidadesatendidas.html">Cidades atendidas</a>
                             </li>
-                            
+                            <li class="nav-item">
+                                <a class="nav-link" href="pedidos.html">Visualizar Pedidos</a>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="cadastro.html">Cadastro</a>
                             </li>
