--- a/src/cidadesatendidas.html
+++ b/src/cidadesatendidas.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body id="principal">
+<body>
 
   <!--CABEÇALHO-->
   <header>
@@ -66,9 +66,9 @@
     </nav>
   </header>
   <!--CONTEUDO-->
-  <main >
-    <figure class="text-center mt-5">
-      <h2>CIDADES ATENDIDAS</h2>
+  <main id="principal">
+    <figure class="text-center mt-5 mb-5">
+      <h1 id="sobreZucco" class="">Cidades Atendidas</h1>
     </figure>
     <div class="container mt-4">
       <div class="row">
@@ -782,7 +782,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 mb-5">
           <figure class="text-center mt-5">
             <h2>TEMPO ENTREGA</h2>
           </figure>
@@ -803,11 +803,11 @@
               </div>
             </div>
             <div class="card-body">
-              <div id="tempo-entrega" class="text-center"></div>
+              <div id="tempo-entrega" class="text-center mb-4"></div>
             </div>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-sm-6 mb-5">
           <figure class="text-center mt-5">
             <h2>VALOR DO FRETE</h2>
           </figure>
@@ -828,7 +828,7 @@
               </div>
             </div>
             <div class="card-body">
-              <div id="valor-transporte" class="text-center"></div>
+              <div id="valor-transporte" class="text-center mb-4"></div>
             </div>
           </div>
         </div>
@@ -941,7 +941,7 @@
             </div>
         </div>
 
-        <div class="container-fluid text-center" style="background-color: #b22222;">
+        <div class="container-fluid text-center mb-0 pb-0" style="background-color: #b22222;">
             <p style="color: #ffffff;">© 2009-2023 Zucco</p>
         </div>
     </footer>
