arrumando tela de login e cadastro

--- a/src/index.html
+++ b/src/index.html
@@ -10,11 +10,11 @@
   <link rel="stylesheet" href="style/style.css">
 </head>
 
-<body id="corpoLogin">
+<body class="col" id="corpoLogin">
     <div id="img-logo" class="row">
       <img src="img/logos/logo2.png" id="imagemLogin">
     </div>
-    <div class="row" id="formularioLogin">
+    <div class="row-md-4" id="formularioLogin">
         <a id="mensagemCadastro">Acessar</a>
         <br><br>
         <label for="usuario" id="userLabel" class="opcaoLogin">Usuário:</label>
