mudança nav tela pedidos

--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-xxl">
             <nav class="navbar fixed-top" style="background-color: #b22222;">
                 <div class="container-fluid">
-                    <a class="navbar-brand me-5" href="index.html"><img id="" src="img/logos/logo2.png"
+                    <a class="navbar-brand me-5" href="home.html"><img id="" src="img/logos/logo2.png"
                             alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -28,6 +28,7 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
                         <ul class="navbar-nav me-auto  mb-lg-0">
                             <li class="nav-item">
                                 <a class="nav-link" aria-current="page" href="home.html">Home</a>
@@ -52,10 +53,7 @@
                                 <a class="nav-link" href="pedidos.html">Visualizar Pedidos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="cadastro.html">Cadastro</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#" id="openModal">Acessar</a>
+                                <a class="nav-item" type="button" onclick="sair()" id="btnSair">Sair</a>
                             </li>
                         </ul>
                         <img id="solApagado" src="img/icones/brightness-low.svg" alt="" width="30px" height="30px">
