--- a/src/pedidos.html
+++ b/src/pedidos.html
@@ -91,7 +91,7 @@
         </div>
     </main>
     <!--RODAPÉ-->
-    <footer id="footer">
+    <footer id="footer" class="footerPedidos">
         <div class="container-fluid bg-light pt-3 pb-4">
             <div class="row">
                 <div class="col-12 col-sm-12 col-md-2 col-lg-2 col-xl-2 col-xxl-2 mb-3 offset-md-1 mb-3">
