--- a/src/trabalheconosco.html
+++ b/src/trabalheconosco.html
@@ -22,8 +22,7 @@
         <nav class="navbar navbar-expand-xxl">
             <nav class="navbar fixed-top" style="background-color: #b22222;">
                 <div class="container-fluid">
-                    <a class="navbar-brand me-5" href="home.html"><img id="" src="img/logos/logo2.png"
-                            alt=""></a>
+                    <a class="navbar-brand me-5" href="home.html"><img id="" src="img/logos/logo2.png" alt=""></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -66,25 +65,29 @@
         </nav>
     </header>
 
-    
+
 
     <main id="principal">
-            <figure class="text-center pt-3">
-                    <h1>Trabalhe Conosco</h1>
-                    <!--TODAS AS PAGS-->
-                </figure>
+        <figure class="text-center pt-3">
+            <h1>Trabalhe Conosco</h1>
+            <!--TODAS AS PAGS-->
+        </figure>
         <div id="main">
             <section id="formularioTrabConosco">
                 <h3>Informe seus dados</h3>
                 <form action="https://api.staticforms.xyz/submit" method="post">
                     <label class="identificacaoformulario">Nome</label>
-                    <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off" required class="preencherformulario">
+                    <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off" required
+                        class="preencherformulario">
                     <label class="identificacaoformulario">Email</label>
-                    <input type="email" name="email" placeholder="Digite seu email" autocomplete="off" required class="preencherformulario">
+                    <input type="email" name="email" placeholder="Digite seu email" autocomplete="off" required
+                        class="preencherformulario">
                     <label class="identificacaoformulario">Telefone</label>
-                    <input type="text" data-js="phone" name="phone" placeholder="Digite seu telefone" autocomplete="off" required class="preencherformulario">
+                    <input type="text" data-js="phone" name="phone" placeholder="Digite seu telefone" autocomplete="off"
+                        required class="preencherformulario">
                     <label class="identificacaoformulario">Mensagem</label>
-                    <textarea name="message" cols="10" rows="5" placeholder="Digite sua mensagem" required class="preencherformulario"></textarea>
+                    <textarea name="message" cols="10" rows="5" placeholder="Digite sua mensagem" required
+                        class="preencherformulario"></textarea>
                     <button class="btnformulario" type="submit">Enviar</button>
 
                     <input type="hidden" name="accessKey" value="d3f8da60-caa1-4555-811a-9220237f0e73">
@@ -187,18 +190,19 @@
                     <div class="card mb-3 mb-3">
                         <div class="card-body mx-auto">
                             <h5 class="card-title fs-6"><b>Sugestões e Reclamações</b></h5>
-                            <div class="d-flex">
-                                <input type="email" class="form-control mt-2" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Nome">
-                                <input type="email" class="form-control mt-2" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Sobrenome">
-                            </div>
-                            <form>
-                                <div class="mb-3">
-                                    <input type="email" class="form-control mt-2" id="exampleInputEmail1"
-                                        aria-describedby="emailHelp" placeholder="Mensagem">
+                            <form action="https://api.staticforms.xyz/submit" method="post" id="sugestEReclam">
+                                <div class="d-flex">
+                                    <input type="text" name="name" placeholder="Nome" autocomplete="off" required
+                                        class="form-control mt-2">
+                                    <input type="text" name="name" placeholder="Sobrenome" autocomplete="off" required
+                                        class="form-control mt-2">
                                 </div>
-                                <button type="submit" class="btn btn-light">Enviar</button>
+                                <textarea name="message" cols="10" rows="5" placeholder="Digite sua reclamação" required
+                                    class="form-control" id="mensagemSugest"></textarea>
+                                <button class="btnSugest" type="submit">Enviar</button>
+
+                                <input type="hidden" name="accessKey" value="d3f8da60-caa1-4555-811a-9220237f0e73">
+                                <input type="hidden" name="redirectTo" value="http://127.0.0.1:5501/src/mensagem.html">
                             </form>
                         </div>
                     </div>
@@ -214,4 +218,5 @@
     <script src="script/modoNoturno.js"></script>
     <script src="/src/script/validacoes.js"></script>
 </body>
+
 </html>
